finish personal portfolio

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Irvan Wang's Personal Portfolio</title>
+    <title>Irvan Wang's Portfolio</title>
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="icon" href="images/favicon.png" />
   </head>
-  <body id="about">
+  <body id="portfolio">
+    <header><h1>Irvan Wang</h1></header>
     <nav>
         <ul>
             <li><a href="index.html">About</a></li>
@@ -17,42 +18,58 @@
         </ul>
     </nav>
     <main>
-        <h1>Irvan Wang</h1>
-        <img src="images/avatar.png" />
-        <p>日本谚语说过一句富有哲理的话，不幸可能成为通向幸福的桥梁。这句话语虽然很短，但令我浮想联翩。 
-            我们都知道，只要有意义，那么就必须慎重考虑。 
-            我们一般认为，抓住了问题的关键，其他一切则会迎刃而解。
-            我们都知道，只要有意义，那么就必须慎重考虑。 
-            莎士比亚说过一句富有哲理的话，人的一生是短的，但如果卑劣地过这一生，就太长了。
-            这不禁令我深思。 我们都知道，只要有意义，那么就必须慎重考虑。 
-            中午吃什么的发生，到底需要如何做到，不中午吃什么的发生，又会如何产生。 
-            从这个角度来看， 叔本华说过一句富有哲理的话，意志是一个强壮的盲人，倚靠在明眼的跛子肩上。
-            带着这句话，我们还要更加慎重的审视这个问题： 带着这些问题，我们来审视一下中午吃什么。 
-            要想清楚，中午吃什么，到底是一种怎么样的存在。 问题的关键究竟为何？ 
-            从这个角度来看， 非洲在不经意间这样说过，最灵繁的人也看不见自己的背脊。
-            这句话语虽然很短，但令我浮想联翩。 本人也是经过了深思熟虑，在每个日日夜夜思考这个问题。 
-            而这些并不是完全重要，更加重要的问题是， 我们一般认为，抓住了问题的关键，其他一切则会迎刃而解。
-            所谓中午吃什么，关键是中午吃什么需要如何写。 每个人都不得不面对这些问题。 
-            在面对这种问题时， 现在，解决中午吃什么的问题，是非常非常重要的。 
-            所以， 在这种困难的抉择下，本人思来想去，寝食难安。 
-            带着这些问题，我们来审视一下中午吃什么。 在这种困难的抉择下，本人思来想去，寝食难安。 
-            苏轼曾经提到过，古之立大事者，不惟有超世之才，亦必有坚忍不拔之志。
-            我希望诸位也能好好地体会这句话。 本人也是经过了深思熟虑，在每个日日夜夜思考这个问题。 
-            每个人都不得不面对这些问题。 在面对这种问题时， 就我个人来说，中午吃什么对我的意义，不能不说非常重大。 
-            既然如此， 从这个角度来看， 就我个人来说，中午吃什么对我的意义，不能不说非常重大。
-            歌德说过一句富有哲理的话，读一本好书，就如同和一个高尚的人在交谈。
-            带着这句话，我们还要更加慎重的审视这个问题： 我们不得不面对一个非常尴尬的事实，那就是， 
-            这样看来， 既然如何， 这样看来， 马尔顿在不经意间这样说过，坚强的信心，能使平凡的人做出惊人的事业。
-            这不禁令我深思。 迈克尔·F·斯特利说过一句富有哲理的话，最具挑战性的挑战莫过于提升自我。
-            我希望诸位也能好好地体会这句话。 既然如此， 对我个人而言，中午吃什么不仅仅是一个重大的事件，
-            还可能会改变我的人生。 经过上述讨论， 富兰克林曾经说过，读书是易事，思索是难事，但两者缺一，
-            便全无用处。这不禁令我深思。 既然如何， 中午吃什么的发生，到底需要如何做到，不中午吃什么的发生，
-            又会如何产生。 莎士比亚曾经提到过，本来无望的事，大胆尝试，往往能成功。这启发了我， 
-            莎士比亚曾经提到过，意志命运往往背道而驰，决心到最后会全部推倒。这似乎解答了我的疑惑。 
-            中午吃什么因何而发生？ 中午吃什么，发生了会如何，不发生又会如何。 
-        </p>
+        <h1>Portfolio</h1>
+        <ul id="portfolioItems">
+            <li>
+                <h2><a href="#">Project Name 1</a></h2>
+                <img src="images/portfolio/project1.png" />
+                <p>
+                    I have also carefully considered this issue day and night.
+                    Now, solving project problems is very, very important.
+                    So, even so, the emergence of the project still represents a certain significance.
+                    How should project be implemented. We all know that as long as it is meaningful, it must be carefully considered.
+                    We have to face a very awkward fact, which is that,
+                    For me personally, a project is not just a significant event, it may also change my life.
+                    To clarify, what kind of existence is a project.
+                    We generally believe that once we grasp the key to the problem, everything else will be easily resolved.
+                    Generally speaking, we must carefully consider and consider.
+                </p>
+            </li>
+
+            <li>
+                <h2><a href="#">Project Name 2</a></h2>
+                <img src="images/portfolio/project2.png" />
+                <p>
+                    I have also carefully considered this issue day and night.
+                    Now, solving project problems is very, very important.
+                    So, even so, the emergence of the project still represents a certain significance.
+                    How should project be implemented. We all know that as long as it is meaningful, it must be carefully considered.
+                    We have to face a very awkward fact, which is that,
+                    For me personally, a project is not just a significant event, it may also change my life.
+                    To clarify, what kind of existence is a project.
+                    We generally believe that once we grasp the key to the problem, everything else will be easily resolved.
+                    Generally speaking, we must carefully consider and consider.
+                </p>
+            </li>
+
+            <li>
+                <h2><a href="#">Project Name 3</a></h2>
+                <img src="images/portfolio/project3.png" />
+                <p>
+                    I have also carefully considered this issue day and night.
+                    Now, solving project problems is very, very important.
+                    So, even so, the emergence of the project still represents a certain significance.
+                    How should project be implemented. We all know that as long as it is meaningful, it must be carefully considered.
+                    We have to face a very awkward fact, which is that,
+                    For me personally, a project is not just a significant event, it may also change my life.
+                    To clarify, what kind of existence is a project.
+                    We generally believe that once we grasp the key to the problem, everything else will be easily resolved.
+                    Generally speaking, we must carefully consider and consider.
+                </p>
+            </li>
+        </ul>
     </main>
-    <footer></footer>
+    <footer>Email: wangy59@rose-hulman.edu</footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
